@@ -37,6 +37,16 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+		        <plugin>
+		            <artifactId>maven-surefire-plugin</artifactId>
+		            <configuration>
+		                <argLine>-Xmx1024m -XX:MaxPermSize=256m ${surefireArgLine}</argLine>
+		                <includes>
+		                    <include>**/*Test.java</include>
+		                </includes>
+		                <forkCount>0</forkCount>
+		            </configuration>
+		        </plugin>
 			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-surefire-plugin</artifactId>
